JP GENERATION - SOME CHANGES

--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -110,41 +115,48 @@
         <div>
             <i aria-hidden="true" class="fa fa-birthday-cake" id="con-ser-icon1"></i>
             <h3>Udalosť</h3>
-            <p class="con-ser-p">Vaša udalosť, na ktorú sa budete radi vracať. Zabezpečíme vám výnimočné fotografie, ktoré zachytia každý kúsok radosti a vzrušenia.</p>
+            <p class="con-ser-p">Vaša udalosť, na ktorú sa budete radi vracať. Zabezpečíme vám výnimočné fotografie,
+                ktoré zachytia každý kúsok radosti a vzrušenia.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-regular fa-calendar-days" id="con-ser-icon2"></i>
             <h3>Firemná akcia</h3>
-            <p class="con-ser-p">Firemná akcia, ktorá zanechá stopy. Oživte svoje podujatia s našou profesionálnou foto produkciovou službou a ukážte starostlivosť o svojich zamestnancov.</p>
+            <p class="con-ser-p">Firemná akcia, ktorá zanechá stopy. Oživte svoje podujatia s našou profesionálnou foto
+                produkciovou službou a ukážte starostlivosť o svojich zamestnancov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-shirt" id="con-ser-icon3"></i>
             <h3>Produkt</h3>
-            <p class="con-ser-p">Vytvorte si profesionálny dojem: Dajte svojim produktom život s našimi kvalitnými fotografiami, aby si zákazníci mohli detailne prezrieť, čo kupujú.</p>
+            <p class="con-ser-p">Vytvorte si profesionálny dojem: Dajte svojim produktom život s našimi kvalitnými
+                fotografiami, aby si zákazníci mohli detailne prezrieť, čo kupujú.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa-solid fa-building" id="con-ser-icon4"></i>
             <h3>Priestor</h3>
-            <p class="con-ser-p">Prezentujte svoj priestor v najlepšom svetle. Pomôžeme vám vytvoriť zážitok už pred vstupom do vášho bytu, domu, kancelárie, reštaurácie alebo baru.</p>
+            <p class="con-ser-p">Prezentujte svoj priestor v najlepšom svetle. Pomôžeme vám vytvoriť zážitok už pred
+                vstupom do vášho bytu, domu, kancelárie, reštaurácie alebo baru.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-people-group" id="con-ser-icon5"></i>
             <h3>Ľudia</h3>
-            <p class="con-ser-p">Portréty, ktoré hovoria o vás. S našou foto produkciou zachytíme vašu osobnosť a šarm prostredníctvom profesionálnych fotografií.</p>
+            <p class="con-ser-p">Portréty, ktoré hovoria o vás. S našou foto produkciou zachytíme vašu osobnosť a šarm
+                prostredníctvom profesionálnych fotografií.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-display" id="con-ser-icon6"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Fotografie, ktoré hovoria viac ako slová. Pomôžeme vám vytvoriť oslnivú reklamu alebo obsah pre sociálne siete, aby ste si udržali záujem zákazníkov.</p>
+            <p class="con-ser-p">Fotografie, ktoré hovoria viac ako slová. Pomôžeme vám vytvoriť oslnivú reklamu alebo
+                obsah pre sociálne siete, aby ste si udržali záujem zákazníkov.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa-solid fa-rotate" id="con-ser-icon7"></i>
             <h3>360° fotografia</h3>
-            <p class="con-ser-p">Nechajte svoj produkt ožiť. S našou 360° fotografiou poskytnete svojim zákazníkom jedinečný zážitok z prezerania a dôkladného skúmania vášho produktu.</p>
+            <p class="con-ser-p">Nechajte svoj produkt ožiť. S našou 360° fotografiou poskytnete svojim zákazníkom
+                jedinečný zážitok z prezerania a dôkladného skúmania vášho produktu.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -180,36 +192,52 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa fotografovanie udalosti alebo stretnutia uskutočňujú?</span>
+                    </button>
                     <div class="panel">
-                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas konania.</p>
+                        <p>Naša služba fotografie sa realizuje fyzicky na mieste, ktoré si zvolíte. Buďto ide o
+                            konkrétnu udalosť, párty, svadbu alebo iné podujatie. Prítomnosť fotografa na mieste
+                            zabezpečuje zachytenie dôležitých okamihov a zážitkov. Spoločne môžeme dohodnúť miesto a čas
+                            konania.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie upravených fotografií?</span>
+                    </button>
                     <div class="panel">
-                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky. Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom čase, aby ste si ich mohli vychutnať.</p>
+                        <p>Po fotení sa vaše fotografie spracujú a upravia tak, aby vynikli ich najlepšie stránky.
+                            Časový rámec na spracovanie sa líši v závislosti od rozsahu fotografií a aktuálneho
+                            pracovného vyťaženia. Však sa vždy snažíme poskytnúť vám hotové fotografie v čo najkratšom
+                            čase, aby ste si ich mohli vychutnať.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
+                        <p>Platbu za naše služby je možné vykonať buď prevodom na náš účet, alebo v hotovosti pri
+                            samotnej realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale
+                            všetky podrobnosti o platbe vám radi poskytneme vopred, aby ste mali všetko pripravené.</p>
                     </div>
                 </div>
                 <div class="menu-4">
                     <button class="accordion"><span class="btn-text">Poskytujete tlačené fotografie a ak áno, aký je proces a cenník?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov, veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich konkrétnych požiadaviek.</p>
+                        <p>Áno, poskytujeme aj tlačené fotografie. V prípade záujmu o tlačené exempláre fotografii sa
+                            dohodneme na konkrétnych požiadavkách a objednávke. Vzhľadom na rôznorodosť formátov,
+                            veľkostí a materiálov je cenník tlačených fotografií individuálny a závisí od vašich
+                            konkrétnych požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Ako dlho budú upravené fotografie uchované na cloudovom úložisku po ich odovzdaní?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko, kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Po spracovaní a odovzdaní upravených fotografií vám poskytneme prístup na cloudové úložisko,
+                            kde budú vaše fotografie uchované počas 30 dní. Počas tohto obdobia máte možnosť si
+                            fotografie stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme
+                            fotografiu z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
                     </div>
                 </div>
             </div>
@@ -360,7 +388,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
