--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -110,46 +115,56 @@
         <div>
             <i aria-hidden="true" class="fa-brands fa-google-drive" id="con-ser-icon1"></i>
             <h3>Logo</h3>
-            <p class="con-ser-p">Logo, ktoré vás odlišuje. Vytvoríme pre vás unikátne logo, ktoré nedegeneruje na obyčajný text. Nechajte svoje podnikanie vyniknúť.</p>
+            <p class="con-ser-p">Logo, ktoré vás odlišuje. Vytvoríme pre vás unikátne logo, ktoré nedegeneruje na
+                obyčajný text. Nechajte svoje podnikanie vyniknúť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-bolt-lightning" id="con-ser-icon2"></i>
             <h3>Firemná identita</h3>
-            <p class="con-ser-p">Celková firemná identita. Navrhneme pre vás kompletnú firemnú identitu, vrátane loga, používania loga, písma, vizitiek, webu, sociálnych sietí a cenníka. Vaša podnikateľská sféra bude odrážať váš profesionálny imidž.</p>
+            <p class="con-ser-p">Celková firemná identita. Navrhneme pre vás kompletnú firemnú identitu, vrátane loga,
+                používania loga, písma, vizitiek, webu, sociálnych sietí a cenníka. Vaša podnikateľská sféra bude
+                odrážať váš profesionálny imidž.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-brands fa-adversal" id="con-ser-icon3"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Reklama, ktorá osloví. Zrealizujeme pre vás efektívnu a profesionálnu reklamu, ktorá splní všetky požiadavky vašej kampane. Nechajte to na nás a venujte sa svojmu podnikaniu.</p>
+            <p class="con-ser-p">Reklama, ktorá osloví. Zrealizujeme pre vás efektívnu a profesionálnu reklamu, ktorá
+                splní všetky požiadavky vašej kampane. Nechajte to na nás a venujte sa svojmu podnikaniu.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-print" id="con-ser-icon4"></i>
             <h3>Podklady pre tlač</h3>
-            <p class="con-ser-p">Dokonalé podklady pre tlač. Spracujeme pre vás všetky potrebné podklady pre tlač. Vykonáme všetku potrebnú prípravu, takže vám ostane už len realizovať tlačové projekty.</p>
+            <p class="con-ser-p">Dokonalé podklady pre tlač. Spracujeme pre vás všetky potrebné podklady pre tlač.
+                Vykonáme všetku potrebnú prípravu, takže vám ostane už len realizovať tlačové projekty.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-share-nodes" id="con-ser-icon5"></i>
             <h3>Sociálna identita</h3>
-            <p class="con-ser-p">Zaujmite na sociálnych sieťach. Zabezpečíme vám profesionálnu sociálnu identitu, ktorá bude vizuálne oslovovať vašu cieľovú skupinu a pomôže vám budovať silnú online komunitu.</p>
+            <p class="con-ser-p">Zaujmite na sociálnych sieťach. Zabezpečíme vám profesionálnu sociálnu identitu, ktorá
+                bude vizuálne oslovovať vašu cieľovú skupinu a pomôže vám budovať silnú online komunitu.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-low-vision" id="con-ser-icon6"></i>
             <h3>Vizuál</h3>
-            <p class="con-ser-p">Predstavte svoj produkt v najlepšom svetle. Ak plánujete predávať produkt, ktorý ešte nie je fyzicky dostupný, vytvoríme pre vás vizuál, aby ste ho mohli predstaviť a prezentovať už teraz.</p>
+            <p class="con-ser-p">Predstavte svoj produkt v najlepšom svetle. Ak plánujete predávať produkt, ktorý ešte
+                nie je fyzicky dostupný, vytvoríme pre vás vizuál, aby ste ho mohli predstaviť a prezentovať už
+                teraz.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa-regular fa-images" id="con-ser-icon7"></i>
             <h3>Úprava fotografie</h3>
-            <p class="con-ser-p">Oživte svoje fotografie. Úpravou surových fotografií a opravou poškodených obrázkov im dodáme nový život. Dajte svojim fotografiám profesionálny vzhľad.</p>
+            <p class="con-ser-p">Oživte svoje fotografie. Úpravou surových fotografií a opravou poškodených obrázkov im
+                dodáme nový život. Dajte svojim fotografiám profesionálny vzhľad.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-brands fa-figma" id="con-ser-icon8"></i>
             <h3>Web dizajn</h3>
-            <p class="con-ser-p">Vytvorte si štýlový web. Navrhneme pre vás vizuálny vzhľad vášho budúceho webu. Ak plánujete vytvoriť web sami, poskytneme vám podporu pri výbere vhodných grafických prvkov a dizajnu.</p>
+            <p class="con-ser-p">Vytvorte si štýlový web. Navrhneme pre vás vizuálny vzhľad vášho budúceho webu. Ak
+                plánujete vytvoriť web sami, poskytneme vám podporu pri výbere vhodných grafických prvkov a dizajnu.</p>
         </div>
         <section class="spacer-div"></section>
     </section>
@@ -184,36 +199,49 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby grafického dizajnu a kde sa stretávame na konzultáciách?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby grafického dizajnu a kde sa stretávame na konzultáciách?</span>
+                    </button>
                     <div class="panel">
-                        <p>Naša služba grafického dizajnu prebieha prostredníctvom konzultácií buď osobne, telefonicky alebo online. Podrobne si preberieme vaše požiadavky, ciele a očakávania. Môžeme sa stretnúť na akomkoľvek mieste, vo vašej kancelárii alebo komunikovať cez e-mail a videohovory.</p>
+                        <p>Naša služba grafického dizajnu prebieha prostredníctvom konzultácií buď osobne, telefonicky
+                            alebo online. Podrobne si preberieme vaše požiadavky, ciele a očakávania. Môžeme sa stretnúť
+                            na akomkoľvek mieste, vo vašej kancelárii alebo komunikovať cez e-mail a videohovory.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na dokončenie grafického dizajnu?</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na dokončenie grafického dizajnu?</span>
+                    </button>
                     <div class="panel">
-                        <p>Časový rámec na dokončenie grafického dizajnu závisí od rozsahu projektu, komplexity a aktuálneho pracovného vyťaženia. Snažíme sa dodržiavať dohodnuté termíny a poskytnúť vám hotový dizajn v čo najkratšom čase, aby ste ho mohli využiť podľa svojich potrieb.</p>
+                        <p>Časový rámec na dokončenie grafického dizajnu závisí od rozsahu projektu, komplexity a
+                            aktuálneho pracovného vyťaženia. Snažíme sa dodržiavať dohodnuté termíny a poskytnúť vám
+                            hotový dizajn v čo najkratšom čase, aby ste ho mohli využiť podľa svojich potrieb.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby a akceptujete kreditné karty?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše služby grafického dizajnu je možné vykonať prevodom na náš bankový účet. Podrobnosti o platbe, vrátane fakturácie a údajov pre prevod, vám poskytneme vopred po dohode. Momentálne neposkytujeme možnosť platby kreditnými kartami.</p>
+                        <p>Platbu za naše služby grafického dizajnu je možné vykonať prevodom na náš bankový účet.
+                            Podrobnosti o platbe, vrátane fakturácie a údajov pre prevod, vám poskytneme vopred po
+                            dohode. Momentálne neposkytujeme možnosť platby kreditnými kartami.</p>
                     </div>
                 </div>
                 <div class="menu-4">
                     <button class="accordion"><span class="btn-text">Poskytujete tlačené materiály s grafickým dizajnom a ak áno, aký je proces a cenník?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme tlačené materiály s grafickým dizajnom. Po dohode a schválení dizajnu vám poskytneme informácie o možnostiach tlače, typoch materiálov, formátoch a cenníku. Zabezpečíme tlač a dodanie tlačených materiálov podľa vašich potrieb a požiadaviek.</p>
+                        <p>Áno, poskytujeme tlačené materiály s grafickým dizajnom. Po dohode a schválení dizajnu vám
+                            poskytneme informácie o možnostiach tlače, typoch materiálov, formátoch a cenníku.
+                            Zabezpečíme tlač a dodanie tlačených materiálov podľa vašich potrieb a požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Ako dlho bude graficky dizajn uchovaný na cloudovom úložisku po jeho odovzdaní?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní hotového grafického dizajnu vám poskytneme prístup na cloudové úložisko, kde budú váš dizajn uchovaný počas 30 dní. Počas tohto obdobia máte možnosť si diztajn stiahnuť a zálohovať ho na vlastnom zariadení. Po uplynutí 30 dní môžeme dizajn z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
+                        <p>Po spracovaní a odovzdaní hotového grafického dizajnu vám poskytneme prístup na cloudové
+                            úložisko, kde budú váš dizajn uchovaný počas 30 dní. Počas tohto obdobia máte možnosť si
+                            diztajn stiahnuť a zálohovať ho na vlastnom zariadení. Po uplynutí 30 dní môžeme dizajn z
+                            cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty.</p>
                     </div>
                 </div>
             </div>
@@ -364,7 +392,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
