--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -110,46 +115,63 @@
         <div>
             <i aria-hidden="true" class="fa-solid fa-cart-shopping" id="con-ser-icon1"></i>
             <h3>Máme vlastnú domenu</h3>
-            <p class="con-ser-p">Správa vlastnej domény. Máte vlastnú doménu, ale neviete, ako ju spravovať? Neobávajte sa, vezmeme to na seba. Zabezpečíme kompletnú správu a údržbu vašej domény, aby ste nemuseli strácať čas a energiu na technické záležitosti.</p>
+            <p class="con-ser-p">Správa vlastnej domény. Máte vlastnú doménu, ale neviete, ako ju spravovať? Neobávajte
+                sa, vezmeme to na seba. Zabezpečíme kompletnú správu a údržbu vašej domény, aby ste nemuseli strácať čas
+                a energiu na technické záležitosti.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-database" id="con-ser-icon2"></i>
             <h3>Máme vlastný hosting</h3>
-            <p class="con-ser-p">Správa hostingových údajov. Po spustení vášho webu ste dostali prihlasovacie údaje a neviete, ako s nimi ďalej pracovať? Nechajte to na nás. Zabezpečíme kompletnú správu vašich hostingových údajov, vrátane nastavenia, zálohovania a monitorovania, aby váš web fungoval spoľahlivo a bez problémov.</p>
+            <p class="con-ser-p">Správa hostingových údajov. Po spustení vášho webu ste dostali prihlasovacie údaje a
+                neviete, ako s nimi ďalej pracovať? Nechajte to na nás. Zabezpečíme kompletnú správu vašich hostingových
+                údajov, vrátane nastavenia, zálohovania a monitorovania, aby váš web fungoval spoľahlivo a bez
+                problémov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-clock-o" id="con-ser-icon3"></i>
             <h3>Ušetríme Vám čas</h3>
-            <p class="con-ser-p">Bezstarostný chod domény a hostingu. S našou pomocou sa nemusíte zaoberať technickými záležitosťami týkajúcimi sa domény a hostingu. Zabrániť problémom a neefektívnemu využitiu času je našou prioritou, aby ste sa mohli sústrediť na dôležitejšie aspekty vášho podnikania.</p>
+            <p class="con-ser-p">Bezstarostný chod domény a hostingu. S našou pomocou sa nemusíte zaoberať technickými
+                záležitosťami týkajúcimi sa domény a hostingu. Zabrániť problémom a neefektívnemu využitiu času je našou
+                prioritou, aby ste sa mohli sústrediť na dôležitejšie aspekty vášho podnikania.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-wrench" id="con-ser-icon4"></i>
             <h3>Optimalizácia webu</h3>
-            <p class="con-ser-p">Kompletná kontrola nastavení. Skontrolujeme všetky aspekty vášho webu a zabezpečíme, aby boli správne nastavené od základov. To zahŕňa rýchlosť načítania, responsivitu, SEO optimalizáciu a ďalšie faktory, ktoré ovplyvňujú výkon a používateľskú skúsenosť.</p>
+            <p class="con-ser-p">Kompletná kontrola nastavení. Skontrolujeme všetky aspekty vášho webu a zabezpečíme,
+                aby boli správne nastavené od základov. To zahŕňa rýchlosť načítania, responsivitu, SEO optimalizáciu a
+                ďalšie faktory, ktoré ovplyvňujú výkon a používateľskú skúsenosť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-tasks" id="con-ser-icon5"></i>
             <h3>Optimalizácia servera</h3>
-            <p class="con-ser-p">Zlepšenie výkonu webu. Ak sa zdá, že váš web je pomalý, nechajte to na nás. Postaráme sa o optimalizáciu servera, aby sa zabezpečila rýchlejšia a plynulejšia návšteva vášho webu. Vaši zákazníci budú mať lepší zážitok a budú sa radi vracať.</p>
+            <p class="con-ser-p">Zlepšenie výkonu webu. Ak sa zdá, že váš web je pomalý, nechajte to na nás. Postaráme
+                sa o optimalizáciu servera, aby sa zabezpečila rýchlejšia a plynulejšia návšteva vášho webu. Vaši
+                zákazníci budú mať lepší zážitok a budú sa radi vracať.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon6"></i>
             <h3>Kontrola zabezpečenia</h3>
-            <p class="con-ser-p">Dôkladná kontrola bezpečnosti: Skontrolujeme váš kód, SSL certifikát, dáta, antispam opatrenia, používanie súborov cookie a zhody s GDPR. Našim cieľom je zabezpečiť, aby sa vaši klienti cítili na vašom webe bezpečne a dôverovali mu.</p>
+            <p class="con-ser-p">Dôkladná kontrola bezpečnosti: Skontrolujeme váš kód, SSL certifikát, dáta, antispam
+                opatrenia, používanie súborov cookie a zhody s GDPR. Našim cieľom je zabezpečiť, aby sa vaši klienti
+                cítili na vašom webe bezpečne a dôverovali mu.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-cloud-upload" id="con-ser-icon7"></i>
             <h3>Prenos dát ku nám</h3>
-            <p class="con-ser-p">Bezproblémový prenos dát. Ak máte problémy s nespoľahlivým alebo pomalým hostingom, môžeme bezpečne a bez nutnosti odstávky preniesť vaše dáta na spoľahlivý hosting. Zabezpečíme hladký prechod, aby ste mohli pokračovať v prevádzke vášho webu bez prerušenia.</p>
+            <p class="con-ser-p">Bezproblémový prenos dát. Ak máte problémy s nespoľahlivým alebo pomalým hostingom,
+                môžeme bezpečne a bez nutnosti odstávky preniesť vaše dáta na spoľahlivý hosting. Zabezpečíme hladký
+                prechod, aby ste mohli pokračovať v prevádzke vášho webu bez prerušenia.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-medkit" id="con-ser-icon8"></i>
             <h3>24/7 Podpora</h3>
-            <p class="con-ser-p">Neustála podpora. Vždy sa môže vyskytnúť neočakávaná chyba. Preto sme tu pre vás 24/7, aby sme vám poskytli podporu a riešili akékoľvek problémy. Vaše podnikanie nezastaví žiadna technická výzva, pretože sme tu, aby sme vám pomohli rásť.</p>
+            <p class="con-ser-p">Neustála podpora. Vždy sa môže vyskytnúť neočakávaná chyba. Preto sme tu pre vás 24/7,
+                aby sme vám poskytli podporu a riešili akékoľvek problémy. Vaše podnikanie nezastaví žiadna technická
+                výzva, pretože sme tu, aby sme vám pomohli rásť.</p>
         </div>
         <section class="spacer-div"></section>
     </section>
@@ -184,36 +206,44 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako nám môžete pomôcť so správou mojej vlastnej domény?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako nám môžete pomôcť so správou mojej vlastnej domény?</span>
+                    </button>
                     <div class="panel">
-                        <p>Poskytujeme asistenciu pri nastavení DNS záznamov, predĺžení platnosti a ďalších úpravách vašej domény. Stačí nám poskytnúť prístupové údaje a budeme sa postarať o zvyšok.</p>
+                        <p>Poskytujeme asistenciu pri nastavení DNS záznamov, predĺžení platnosti a ďalších úpravách
+                            vašej domény. Stačí nám poskytnúť prístupové údaje a budeme sa postarať o zvyšok.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Čo presnejšie robíte so správou nášho hostingu vo vlastnej režií?</span></button>
+                    <button class="accordion"><span class="btn-text">Čo presnejšie robíte so správou nášho hostingu vo vlastnej režií?</span>
+                    </button>
                     <div class="panel">
-                        <p>Ak nám poskytnete prihlasovacie údaje k vášmu hostingovému účtu, zabezpečíme nastavenie vášho webu, nahratie súborov, vytvorenie e-mailových kont a ďalšie technické úpravy podľa vašich požiadaviek.</p>
+                        <p>Ak nám poskytnete prihlasovacie údaje k vášmu hostingovému účtu, zabezpečíme nastavenie vášho
+                            webu, nahratie súborov, vytvorenie e-mailových kont a ďalšie technické úpravy podľa vašich
+                            požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Ako by ste nám ušetrili čas pri správe domény a hostingu?</span>
                     </button>
                     <div class="panel">
-                        <p>Prevezmeme na seba starosti s údržbou a správou vášho doménového a hostingového prostredia, aby ste mohli sústrediť svoj čas na dôležitejšie úlohy vo vašom podnikaní.</p>
+                        <p>Prevezmeme na seba starosti s údržbou a správou vášho doménového a hostingového prostredia,
+                            aby ste mohli sústrediť svoj čas na dôležitejšie úlohy vo vašom podnikaní.</p>
                     </div>
                 </div>
                 <div class="menu-4">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za službu správy domény a hostingu?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za službu správy domény a hostingu môžete uskutočniť prevodom na náš bankový účet. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
+                        <p>Platbu za službu správy domény a hostingu môžete uskutočniť prevodom na náš bankový účet.
+                            Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Poskytujete 24/7 podporu pre prípad neočakávaných chýb?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, sme tu pre vás 24/7, aby sme vám pomohli v prípade technických otázok alebo problémov s doménou a hostingom. Stačí nám kontaktovať a postaráme sa o rýchle riešenie.</p>
+                        <p>Áno, sme tu pre vás 24/7, aby sme vám pomohli v prípade technických otázok alebo problémov s
+                            doménou a hostingom. Stačí nám kontaktovať a postaráme sa o rýchle riešenie.</p>
                     </div>
                 </div>
             </div>
@@ -364,7 +394,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
