--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -110,35 +115,42 @@
         <div>
             <i aria-hidden="true" class="fa-solid fa-credit-card" id="con-ser-icon1"></i>
             <h3>Zakúpenie vlastnej domeny</h3>
-            <p class="con-ser-p">Personalizovaná doména pre váš web. Umožníme vám zakúpiť a registrovať unikátnu doménu, ktorá bude zrkadliť váš online identitu a zvýšiť profesionalitu vášho podnikania.</p>
+            <p class="con-ser-p">Personalizovaná doména pre váš web. Umožníme vám zakúpiť a registrovať unikátnu doménu,
+                ktorá bude zrkadliť váš online identitu a zvýšiť profesionalitu vášho podnikania.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
             <h3>Umiestnenie na hosting</h3>
-            <p class="con-ser-p">Zabezpečte si priestor pre váš web. Poskytneme vám hostingové riešenie s dostatočnou kapacitou a výkonom, aby ste mohli bez problémov hostovať váš web a spravovať jeho obsah.</p>
+            <p class="con-ser-p">Zabezpečte si priestor pre váš web. Poskytneme vám hostingové riešenie s dostatočnou
+                kapacitou a výkonom, aby ste mohli bez problémov hostovať váš web a spravovať jeho obsah.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-certificate" id="con-ser-icon3"></i>
             <h3>SSL certifikát</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Zabezpečte svoj web. S SSL certifikátom zabezpečíme vašu webstránku a zabezpečíme dôveru u vašich návštevníkov. Poskytneme im bezpečné pripojenie a ochranu ich osobných údajov.</p>
+            <p class="con-ser-p">Zabezpečte svoj web. S SSL certifikátom zabezpečíme vašu webstránku a zabezpečíme
+                dôveru u vašich návštevníkov. Poskytneme im bezpečné pripojenie a ochranu ich osobných údajov.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-wordpress" id="con-ser-icon4"></i>
             <h3>Inštalácia</h3>
-            <p class="con-ser-p">Jednoduchá inštalácia WordPressu. Nainštalujeme WordPress na vašu doménu, takže budete môcť spravovať obsah vášho webu bez nutnosti znalosti kódovania. Budete mať plnú kontrolu nad svojím webom.</p>
+            <p class="con-ser-p">Jednoduchá inštalácia WordPressu. Nainštalujeme WordPress na vašu doménu, takže budete
+                môcť spravovať obsah vášho webu bez nutnosti znalosti kódovania. Budete mať plnú kontrolu nad svojím
+                webom.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-cogs" id="con-ser-icon5"></i>
             <h3>Nastavenie</h3>
-            <p class="con-ser-p">Presné nastavenie pre váš web. Zameriame sa na detaily a správne nastavenie vášho webu, aby ste mali optimálnu výkonnosť, bezpečnosť a používateľskú skúsenosť.</p>
+            <p class="con-ser-p">Presné nastavenie pre váš web. Zameriame sa na detaily a správne nastavenie vášho webu,
+                aby ste mali optimálnu výkonnosť, bezpečnosť a používateľskú skúsenosť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-laptop-code" id="con-ser-icon6"></i>
             <h3>Dizajn</h3>
-            <p class="con-ser-p">Unikátny dizajn pre váš web. Vytvoríme pre vás dizajn, ktorý bude vizuálne príťažlivý a zodpovedajúci vašej značke. Váš web bude vyniknúť a zaujme návštevníkov.</p>
+            <p class="con-ser-p">Unikátny dizajn pre váš web. Vytvoríme pre vás dizajn, ktorý bude vizuálne príťažlivý a
+                zodpovedajúci vašej značke. Váš web bude vyniknúť a zaujme návštevníkov.</p>
         </div>
     </section>
     <section class="content-ser-3">
@@ -146,37 +158,48 @@
             <i aria-hidden="true" class="fa fa-mouse-pointer" id="con-ser-icon7"></i>
             <h3>Funkčnosť</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Dôkladná kontrola funkčnosti. Skontrolujeme a otestujeme všetky funkcie vášho webu, aby sme zabezpečili jeho bezchybný chod a použiteľnosť pre vašich návštevníkov.</p>
+            <p class="con-ser-p">Dôkladná kontrola funkčnosti. Skontrolujeme a otestujeme všetky funkcie vášho webu, aby
+                sme zabezpečili jeho bezchybný chod a použiteľnosť pre vašich návštevníkov.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon8"></i>
             <h3>Zabezpečenie</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Zabezpečte svoj web pred hrozbami. S našimi bezpečnostnými opatreniami ochránime váš web pred rôznymi typmi útokov a zneužitím. Budete mať istotu, že vaše dáta sú chránené.</p>
+            <p class="con-ser-p">Zabezpečte svoj web pred hrozbami. S našimi bezpečnostnými opatreniami ochránime váš
+                web pred rôznymi typmi útokov a zneužitím. Budete mať istotu, že vaše dáta sú chránené.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-cookie-bite" id="con-ser-icon9"></i>
             <h3>GDPR a cookie súbory</h3>
-            <p class="con-ser-p">Zabezpečenie GDPR a správa cookie súborov. Pomôžeme vám nastaviť váš web tak, aby ste získali súhlas od vašich zákazníkov alebo používateľov webu pre niektoré operácie, ktoré to vyžadujú. Zabezpečíme, aby váš web bol v súlade s GDPR a aby obidve strany boli spokojné s ochranou osobných údajov.</p>
+            <p class="con-ser-p">Zabezpečenie GDPR a správa cookie súborov. Pomôžeme vám nastaviť váš web tak, aby ste
+                získali súhlas od vašich zákazníkov alebo používateľov webu pre niektoré operácie, ktoré to vyžadujú.
+                Zabezpečíme, aby váš web bol v súlade s GDPR a aby obidve strany boli spokojné s ochranou osobných
+                údajov.</p>
         </div>
     </section>
     <section class="content-ser-4">
         <div>
             <i aria-hidden="true" class="fa-solid fa-terminal" id="con-ser-icon10"></i>
             <h3>Posledný test a sme online</h3>
-            <p class="con-ser-p">Kontrolný test pred spustením: Vykonáme posledný test vášho webu, aby sme sa uistili, že všetko funguje správne a že váš web je pripravený ísť online. Chceme vám odovzdať 100% funkčný produkt.</p>
+            <p class="con-ser-p">Kontrolný test pred spustením: Vykonáme posledný test vášho webu, aby sme sa uistili,
+                že všetko funguje správne a že váš web je pripravený ísť online. Chceme vám odovzdať 100% funkčný
+                produkt.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-regular fa-handshake" id="con-ser-icon11"></i>
             <h3>Odovzdanie webu</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Odovzdáme vám váš web. Poskytneme vám všetky potrebné prihlasovacie údaje a prístupové údaje na správu vášho webu. Budete mať plnú kontrolu a možnosť spravovať váš web podľa svojich potrieb.</p>
+            <p class="con-ser-p">Odovzdáme vám váš web. Poskytneme vám všetky potrebné prihlasovacie údaje a prístupové
+                údaje na správu vášho webu. Budete mať plnú kontrolu a možnosť spravovať váš web podľa svojich
+                potrieb.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-headset" id="con-ser-icon12"></i>
             <h3>Podpora</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Odborná podpora 24/7. Ak nám zveríte správu domény a hostingu, budeme tu pre vás kedykoľvek v prípade neočakávaných chýb alebo problémov s doménou. Poskytneme vám odbornú podporu a rýchlu reakciu na riešenie problémov.</p>
+            <p class="con-ser-p">Odborná podpora 24/7. Ak nám zveríte správu domény a hostingu, budeme tu pre vás
+                kedykoľvek v prípade neočakávaných chýb alebo problémov s doménou. Poskytneme vám odbornú podporu a
+                rýchlu reakciu na riešenie problémov.</p>
         </div>
     </section>
     <section class="content-ser-line">
@@ -210,36 +233,51 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby WordPress webu a aké informácie potrebujete od klienta?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby WordPress webu a aké informácie potrebujete od klienta?</span>
+                    </button>
                     <div class="panel">
-                        <p>Realizácia služby WordPress webu začína konzultáciou s klientom, kde si preberieme vaše požiadavky na webovú stránku. Potrebujeme informácie o vašej spoločnosti, cieľovej skupine, obsahu a funkciách, ktoré chcete na webe zahrnúť. Na základe týchto informácií vytvoríme koncept a návrh webu.</p>
+                        <p>Realizácia služby WordPress webu začína konzultáciou s klientom, kde si preberieme vaše
+                            požiadavky na webovú stránku. Potrebujeme informácie o vašej spoločnosti, cieľovej skupine,
+                            obsahu a funkciách, ktoré chcete na webe zahrnúť. Na základe týchto informácií vytvoríme
+                            koncept a návrh webu.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Ako dlho zvyčajne trvá vytvorenie a dokončenie WordPress webu?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako dlho zvyčajne trvá vytvorenie a dokončenie WordPress webu?</span>
+                    </button>
                     <div class="panel">
-                        <p>Časový rámec vytvorenia a dokončenia WordPress webu závisí od rozsahu projektu, jeho komplexity a individuálnych požiadaviek klienta. Všeobecne platí, že vytvorenie webu môže trvať niekoľko týždňov až mesiacov. Presný časový rámec budeme dohodnúť po detailnejšej analýze vašich požiadaviek.</p>
+                        <p>Časový rámec vytvorenia a dokončenia WordPress webu závisí od rozsahu projektu, jeho
+                            komplexity a individuálnych požiadaviek klienta. Všeobecne platí, že vytvorenie webu môže
+                            trvať niekoľko týždňov až mesiacov. Presný časový rámec budeme dohodnúť po detailnejšej
+                            analýze vašich požiadaviek.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované služby WordPress webu?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za službu WordPress webu je možné vykonať prevodom na náš bankový účet. Zvyčajne sa platba realizuje vo forme záloh a záverečné platby po dokončení projektu. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
+                        <p>Platbu za službu WordPress webu je možné vykonať prevodom na náš bankový účet. Zvyčajne sa
+                            platba realizuje vo forme záloh a záverečné platby po dokončení projektu. Presné podrobnosti
+                            o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-4">
                     <button class="accordion"><span class="btn-text">Ako prebieha dodanie hotového WordPress webu klientovi?</span>
                     </button>
                     <div class="panel">
-                        <p>Po dokončení WordPress webu vám poskytneme prístup na hostingové prostredie, kde bude váš web umiestnený. Zabezpečíme prenos súborov a databázy a nainštalujeme web na hostingový server. Zároveň vás oboznámime s administráciou webu, aby ste mohli spravovať obsah a aktualizácie.</p>
+                        <p>Po dokončení WordPress webu vám poskytneme prístup na hostingové prostredie, kde bude váš web
+                            umiestnený. Zabezpečíme prenos súborov a databázy a nainštalujeme web na hostingový server.
+                            Zároveň vás oboznámime s administráciou webu, aby ste mohli spravovať obsah a
+                            aktualizácie.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Poskytujete školenie alebo podporu pri používaní WordPress webu?</span>
                     </button>
                     <div class="panel">
-                        <p>Áno, poskytujeme školenie a podporu pri používaní WordPress webu. Po dodaní webu vás naučíme, ako pridávať a upravovať obsah, spravovať menu a stránky, pridávať obrázky a podobne. Zabezpečíme aj podporu v prípade technických otázok alebo problémov s webom.</p>
+                        <p>Áno, poskytujeme školenie a podporu pri používaní WordPress webu. Po dodaní webu vás naučíme,
+                            ako pridávať a upravovať obsah, spravovať menu a stránky, pridávať obrázky a podobne.
+                            Zabezpečíme aj podporu v prípade technických otázok alebo problémov s webom.</p>
                     </div>
                 </div>
             </div>
@@ -390,7 +428,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
