--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -189,7 +189,8 @@
             <i aria-hidden="true" class="fa-solid fa-lightbulb" id="icon-con3"></i>
             <h3 class="con-h">Kreatívne riešenia</h3>
             <div class="line-con"></div>
-            <p class="con-p">Otvorte brány kreatívnych riešení, ktoré vám pomáhajú pretaviť vašu vlastnú veľkú víziu do skutočnosti.</p>
+            <p class="con-p">Otvorte brány kreatívnych riešení, ktoré vám pomáhajú pretaviť vašu vlastnú veľkú víziu do
+                skutočnosti.</p>
         </div>
     </div>
 </section>
@@ -211,17 +212,24 @@
         <div class="white">
             <i aria-hidden="true" class="fa-solid fa-camera-retro" id="ser-icon1"></i>
             <h3>Foto produkcia</h3>
-            <p class="con-p">Vytvorte si neodolateľnú vizuálnu identitu. S našou profesionálnou fotografickou produkciou si vybudujete obrazovú silu, ktorá zaujme a osloví vašich zákazníkov. Nech sú vaše fotografie e-shopu, sociálnych sietí alebo osobných udalostí nezabudnuteľné a neodolateľné.</p>
+            <p class="con-p">Vytvorte si neodolateľnú vizuálnu identitu. S našou profesionálnou fotografickou produkciou
+                si vybudujete obrazovú silu, ktorá zaujme a osloví vašich zákazníkov. Nech sú vaše fotografie e-shopu,
+                sociálnych sietí alebo osobných udalostí nezabudnuteľné a neodolateľné.</p>
         </div>
         <div id="turquise">
             <i aria-hidden="true" class="fa fa-video-camera" id="ser-icon2"></i>
             <h3 class="turquise-bl">Video produkcia</h3>
-            <p class="con-p-black">Prekročte hranice amatérskej tvorby. Zabudnite na obmedzenia mobilných aplikácií a nechajte nás vytvoriť video, ktoré vás nadchne. S našou kreatívnou video produkciou vám garantujeme výsledok, na ktorý budete hrdí a ktorý budete ochotní pozerať dookola.</p>
+            <p class="con-p-black">Prekročte hranice amatérskej tvorby. Zabudnite na obmedzenia mobilných aplikácií a
+                nechajte nás vytvoriť video, ktoré vás nadchne. S našou kreatívnou video produkciou vám garantujeme
+                výsledok, na ktorý budete hrdí a ktorý budete ochotní pozerať dookola.</p>
         </div>
         <div class="white">
             <i aria-hidden="true" class="fa-solid fa-object-group" id="ser-icon3"></i>
             <h3>Grafický dizajn</h3>
-            <p class="con-p">Oživte svoju vizuálnu identitu. Vytvoríme pre vás štýlové bannery, originálne logá, atraktívne plagáty, profesionálne vizitky a vizualizácie, ktoré presne vyjadria vašu jedinečnosť. S naším grafickým dizajnom si zabezpečíte silnú a pútavú prezentáciu vo všetkých aspektoch vašej komunikácie.</p>
+            <p class="con-p">Oživte svoju vizuálnu identitu. Vytvoríme pre vás štýlové bannery, originálne logá,
+                atraktívne plagáty, profesionálne vizitky a vizualizácie, ktoré presne vyjadria vašu jedinečnosť. S
+                naším grafickým dizajnom si zabezpečíte silnú a pútavú prezentáciu vo všetkých aspektoch vašej
+                komunikácie.</p>
         </div>
     </section>
     <section class="content2">
@@ -229,18 +237,24 @@
             <i aria-hidden="true" class="fa-brands fa-wordpress-simple" id="ser-icon4"></i>
             <h3>WordPress web</h3>
             <span class="spacer"></span>
-            <p class="con-p">Vstúpte do sveta digitálneho zázraku. Sme tu, aby sme vytvorili pre vás jedinečný web na mieru, bez zbytočných starostí s technickými detailmi. Od blogu až po e-shop, zabezpečíme vám komplexné riešenie v oblasti web developmentu, ktoré vám pomôže budovať silnú online prítomnosť.</p>
+            <p class="con-p">Vstúpte do sveta digitálneho zázraku. Sme tu, aby sme vytvorili pre vás jedinečný web na
+                mieru, bez zbytočných starostí s technickými detailmi. Od blogu až po e-shop, zabezpečíme vám komplexné
+                riešenie v oblasti web developmentu, ktoré vám pomôže budovať silnú online prítomnosť.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server" id="ser-icon5"></i>
             <h3>Správa domény a hostingu</h3>
-            <p class="con-p">Uvoľnite sa od zbytočných starostí s vaším webovým prostredím. Poskytujeme vám kompletnú správu domény a hostingových služieb, či už potrebujete podporu pre váš e-shop, firemný web alebo akýkoľvek iný typ stránky. Nechajte to na nás a zamerajte sa na rozvoj vášho biznisu.</p>
+            <p class="con-p">Uvoľnite sa od zbytočných starostí s vaším webovým prostredím. Poskytujeme vám kompletnú
+                správu domény a hostingových služieb, či už potrebujete podporu pre váš e-shop, firemný web alebo
+                akýkoľvek iný typ stránky. Nechajte to na nás a zamerajte sa na rozvoj vášho biznisu.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-chart-column" id="ser-icon6"></i>
             <h3>Digitálna stratégia</h3>
             <span class="spacer"></span>
-            <p class="con-p">Sme váš sprievodca v online svete, pripravení vám pomôcť analyzovať, plánovať a dosahovať úspech prostredníctvom efektívnych digitálnych stratégií. Budúcnosť vášho online úspechu spočíva v našej analýze a plánovaní, čo vám umožní prekročiť hranice a dosiahnuť výsledky, ktoré si zaslúžite.</p>
+            <p class="con-p">Sme váš sprievodca v online svete, pripravení vám pomôcť analyzovať, plánovať a dosahovať
+                úspech prostredníctvom efektívnych digitálnych stratégií. Budúcnosť vášho online úspechu spočíva v našej
+                analýze a plánovaní, čo vám umožní prekročiť hranice a dosiahnuť výsledky, ktoré si zaslúžite.</p>
         </div>
     </section>
 </section>
@@ -361,7 +375,9 @@
             <h2 class="skills">Tu sú nejaké naše zručnosti</h2>
         </header>
         <div class="skill-text">
-            Dokonalosť je neustálym úsilím. Nezakrývame, že sme odborníci na všetko na 100%. No práve táto skromnosť a odhodlanie nás vyznačuje. Vždy sme pripravení sa učiť nové veci a prekvapiť vás. Preto, ak si myslíte, že niečo nie je možné, vedzte, že pre nás to znamená len novú výzvu. Spolu objavíme, čo sme schopní dosiahnuť.
+            Dokonalosť je neustálym úsilím. Nezakrývame, že sme odborníci na všetko na 100%. No práve táto skromnosť a
+            odhodlanie nás vyznačuje. Vždy sme pripravení sa učiť nové veci a prekvapiť vás. Preto, ak si myslíte, že
+            niečo nie je možné, vedzte, že pre nás to znamená len novú výzvu. Spolu objavíme, čo sme schopní dosiahnuť.
         </div>
         <section class="skill-list">
             <div class="container-skill">
@@ -607,7 +623,7 @@
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../js/project-gallery.js" type="text/javascript"></script>
 <script src="../js/skill-bar.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 <!-------------TO DO-------------->
