--- a/plne-responzivny-web/jpgeneration/kontakt.html
+++ b/plne-responzivny-web/jpgeneration/kontakt.html
@@ -136,47 +136,53 @@
     <div class="form-row">
         <form action="spracuj-formular.php" method="post">
             <div class="form-wrap">
-                    <label for="name">
-                    <input type="text" id="name" name="name" placeholder="Meno" maxlength="64" required>
-                    </label>
-                    <label for="lastname">
-                    <input type="text" id="lastname" name="lastname" placeholder="Priezvisko" maxlength="64" required>
-                    </label>
-                    <label for="email">
-                    <input type="text" id="email" name="email" placeholder="E - mail" maxlength="64" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" required>
-                    </label>
-                    <label for="subject">
-                    <input type="text" id="subject" name="subject" placeholder="Predmet" maxlength="64" required>
-                    </label>
-                </div>
-                <div class="form-wrap">
-                    <label for="services">
-                        <select id="services" name="services" required>
-                            <option value="none" disabled selected hidden>Vyberte si službu</option>
-                            <option value="foto-production">Foto produkcia</option>
-                            <option value="video-production">Video produkcia</option>
-                            <option value="graphic-design">Grafický dizajn</option>
-                            <option value="wordpress-web">Wordpress web</option>
-                            <option value="domain-hosting-managment">Správa domény a hostingu</option>
-                            <option value="digital-strategy">Digitálna stratégia</option>
-                            <option value="other">Iné..</option>
-                        </select>
-                    </label>
-                </div>
-                <div class="form-wrap">
-            <label for="message">
-            <textarea type="text" id="message" name="message" placeholder="Vaša správa..." minlength="5" maxlength="1400"
-                      required></textarea>
-            </label>
-                </div>
+                <label for="name">
+                    <input id="name" maxlength="64" name="name" placeholder="Meno" required type="text">
+                </label>
+                <label for="lastname">
+                    <input id="lastname" maxlength="64" name="lastname" placeholder="Priezvisko" required type="text">
+                </label>
+                <label for="email">
+                    <input id="email" maxlength="64" name="email" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" placeholder="E - mail"
+                           required
+                           type="text">
+                </label>
+                <label for="subject">
+                    <input id="subject" maxlength="64" name="subject" placeholder="Predmet" required type="text">
+                </label>
+            </div>
+            <div class="form-wrap">
+                <label for="services">
+                    <select id="services" name="services" required>
+                        <option disabled hidden selected value="none">Vyberte si službu</option>
+                        <option value="foto-production">Foto produkcia</option>
+                        <option value="video-production">Video produkcia</option>
+                        <option value="graphic-design">Grafický dizajn</option>
+                        <option value="wordpress-web">Wordpress web</option>
+                        <option value="domain-hosting-managment">Správa domény a hostingu</option>
+                        <option value="digital-strategy">Digitálna stratégia</option>
+                        <option value="other">Iné..</option>
+                    </select>
+                </label>
+            </div>
+            <div class="form-wrap">
+                <label for="message">
+            <textarea id="message" maxlength="1400" minlength="5" name="message" placeholder="Vaša správa..."
+                      required
+                      type="text"></textarea>
+                </label>
+            </div>
             <div class="form-wrap">
                 <label for="chceckbox">
-                <input id="chceckbox" name="checkbox" type="checkbox" required><a class="gdpr-ceck" href="gdpr.html" target="_blank">Súhlasim s GDPR</a>
+                    <input id="chceckbox" name="checkbox" required type="checkbox"><a class="gdpr-ceck" href="gdpr.html"
+                                                                                      target="_blank">Súhlasim s
+                    GDPR</a>
                 </label>
             </div>
             <div class="form-wrap">
                 <label for="submit">
-                <input id="submit" class="submit-btn" onclick="toastFunction()" type="submit" name="submit" value="ODOSLAŤ">
+                    <input class="submit-btn" id="submit" name="submit" onclick="toastFunction()" type="submit"
+                           value="ODOSLAŤ">
                 </label>
             </div>
             <div id="toast">
@@ -187,7 +193,9 @@
 </section>
 <!-------------MAPA------------->
 <section class="google-map">
-    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1308.7135232393316!2d21.226232!3d49.00246!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ef29a65d6762f%3A0x70dfa9855d39e2fe!2sMatice%20slovenskej%204768%2F4%2C%20080%2001%20Pre%C5%A1ov%2C%20Slovensko!5e0!3m2!1ssk!2sus!4v1686171964905!5m2!1ssk!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe allowfullscreen=""
+            class="map"
+            loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1308.7135232393316!2d21.226232!3d49.00246!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ef29a65d6762f%3A0x70dfa9855d39e2fe!2sMatice%20slovenskej%204768%2F4%2C%20080%2001%20Pre%C5%A1ov%2C%20Slovensko!5e0!3m2!1ssk!2sus!4v1686171964905!5m2!1ssk!2sus" style="border:0;"></iframe>
 </section>
 <!-------------FOOTER-------------->
 <footer>
@@ -329,7 +337,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../js/nav.js" type="text/javascript"></script>
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 <script src="../js/submit-alert.js" type="text/javascript"></script>
 </body>
 </html>
