--- a/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/kto-vlastne-sme.html
@@ -141,7 +141,8 @@
         <div class="who-container">
             <div>
                 <h4 class="who-h">KTO SME</h4>
-                <p class="who-p">Sme začínajúci web so 4 ročnou praxou služieb ktoré poskytujeme. Nie sme reklamná agentúra ani fotoštúdio jednoducho sme digitálna generácia…        </p>
+                <p class="who-p">Sme začínajúci web so 4 ročnou praxou služieb ktoré poskytujeme. Nie sme reklamná
+                    agentúra ani fotoštúdio jednoducho sme digitálna generácia… </p>
             </div>
             <div class="border-who">
                 <h4 class="who-h">NAŠA VÍZIA</h4>
@@ -170,7 +171,7 @@
             <div class="row team-row">
                 <div class="team-member">
                     <div class="team-img">
-                        <img src="../../image/about-us/founder-cover-jp.webp" alt="">
+                        <img alt="" src="../../image/about-us/founder-cover-jp.webp">
                         <div class="overlay-photo">
                             <div class="team-details">
                                 <h3 class="team-title">Jaroslav Potočný</h3>
@@ -410,7 +411,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 <script src="../../js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
