--- a/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
+++ b/plne-responzivny-web/jpgeneration/o-nas/zakaznici.html
@@ -109,22 +109,23 @@
     </div>
     <section class="costumers">
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/phyysio-zakaz-cover.webp" alt="Physio medical logo">
+            <img alt="Physio medical logo" class="costumers-p" src="../../image/costumers/phyysio-zakaz-cover.webp">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/brilia-zakaz-cover.webp" alt="Brilia logo">
+            <img alt="Brilia logo" class="costumers-p" src="../../image/costumers/brilia-zakaz-cover.webp">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/encore-zakaz-cover.webp" alt="Encore the club logo">
+            <img alt="Encore the club logo" class="costumers-p" src="../../image/costumers/encore-zakaz-cover.webp">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/ochutnaj-zakaz-cover.webp" alt="Ochutnaj Prešov logo">
+            <img alt="Ochutnaj Prešov logo" class="costumers-p" src="../../image/costumers/ochutnaj-zakaz-cover.webp">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/pivarenpodhaj-zakaz-cover.webp" alt="Pivareň pod hájom logo">
+            <img alt="Pivareň pod hájom logo" class="costumers-p"
+                 src="../../image/costumers/pivarenpodhaj-zakaz-cover.webp">
         </div>
         <div class="photo-content">
-            <img class="costumers-p" src="../../image/costumers/kvadrat-zakaz-cover.webp" alt="Kvadra sushi logo">
+            <img alt="Kvadra sushi logo" class="costumers-p" src="../../image/costumers/kvadrat-zakaz-cover.webp">
         </div>
     </section>
 </section>
@@ -268,7 +269,7 @@
 <!-------------JAVA SCRIPT-------------->
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
