--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -1335,7 +1335,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/portfol-fotky.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
