--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -99,7 +104,7 @@
         <div class="services-btn">
             <button class="port-btn">
                 <a class="port-txt" href="../portfolio/fotky.html">Portfólio<i aria-hidden="true"
-                                                                                class="fa fa-long-arrow-right"></i></a>
+                                                                               class="fa fa-long-arrow-right"></i></a>
             </button>
         </div>
     </header>
@@ -111,18 +116,24 @@
             <i aria-hidden="true" class="fa fa-home" id="con-ser-icon1"></i>
             <h3>Analýza firmy</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Komplexná analýza vašej firmy: Zhodnotíme poskytované produkty a služby, identifikujeme silné a slabé stránky vášho podnikania a analyzujeme príležitosti a riziká pre vašich klientov. Poskytneme vám podrobný prehľad, aby ste lepšie pochopili súčasný stav a možnosti rozvoja.</p>
+            <p class="con-ser-p">Komplexná analýza vašej firmy: Zhodnotíme poskytované produkty a služby, identifikujeme
+                silné a slabé stránky vášho podnikania a analyzujeme príležitosti a riziká pre vašich klientov.
+                Poskytneme vám podrobný prehľad, aby ste lepšie pochopili súčasný stav a možnosti rozvoja.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-users" id="con-ser-icon2"></i>
             <h3>Analýza zákazníkov</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Segmentácia zákazníkov. Pomôžeme vám identifikovať rôzne segmenty zákazníkov, ktoré by mohli mať odlišné potreby a preferencie. Týmto spôsobom budete môcť lepšie cieliť svoje marketingové aktivity a prispôsobiť svoje produkty alebo služby jednotlivým segmentom.</p>
+            <p class="con-ser-p">Segmentácia zákazníkov. Pomôžeme vám identifikovať rôzne segmenty zákazníkov, ktoré by
+                mohli mať odlišné potreby a preferencie. Týmto spôsobom budete môcť lepšie cieliť svoje marketingové
+                aktivity a prispôsobiť svoje produkty alebo služby jednotlivým segmentom.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-bar-chart" id="con-ser-icon3"></i>
             <h3>Vyhodnotenie analýz</h3>
-            <p class="con-ser-p">Report o firme a zákazníkoch. Vypracujeme pre vás podrobný report, ktorý zhrnie výsledky analýz vašej firmy a zákazníkov. Poskytneme vám cenné informácie o súčasnom stave, trendoch a odporúčania pre ďalší rozvoj.</p>
+            <p class="con-ser-p">Report o firme a zákazníkoch. Vypracujeme pre vás podrobný report, ktorý zhrnie
+                výsledky analýz vašej firmy a zákazníkov. Poskytneme vám cenné informácie o súčasnom stave, trendoch a
+                odporúčania pre ďalší rozvoj.</p>
         </div>
     </section>
     <section class="content-ser-2">
@@ -130,24 +141,31 @@
             <i aria-hidden="true" class="fa fa-arrow-up" id="con-ser-icon4"></i>
             <h3>Nastavenie cieľov</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Nastavenie krátkodobých a dlhodobých cieľov. Pomôžeme vám definovať jasné a merateľné ciele pre váš podnik. Bez ohľadu na to, či ide o krátkodobé alebo dlhodobé ciele, pomôžeme vám ich vypracovať a vytvoriť stratégiu na ich dosiahnutie.</p>
+            <p class="con-ser-p">Nastavenie krátkodobých a dlhodobých cieľov. Pomôžeme vám definovať jasné a merateľné
+                ciele pre váš podnik. Bez ohľadu na to, či ide o krátkodobé alebo dlhodobé ciele, pomôžeme vám ich
+                vypracovať a vytvoriť stratégiu na ich dosiahnutie.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa-solid fa-tablet-screen-button" id="con-ser-icon5"></i>
             <h3>Nastavenie stratégie</h3>
-            <p class="con-ser-p">Vytvorenie marketingovej, biznisovej a digitálnej stratégie. Na základe analýzy vašej firmy a zákazníkov vytvoríme špecifickú stratégiu pre vaše potreby. Pomôžeme vám vytvoriť efektívne marketingové a biznisové kampane a navrhneme digitálne riešenia, aby ste dosiahli svoje ciele.</p>
+            <p class="con-ser-p">Vytvorenie marketingovej, biznisovej a digitálnej stratégie. Na základe analýzy vašej
+                firmy a zákazníkov vytvoríme špecifickú stratégiu pre vaše potreby. Pomôžeme vám vytvoriť efektívne
+                marketingové a biznisové kampane a navrhneme digitálne riešenia, aby ste dosiahli svoje ciele.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-calculator" id="con-ser-icon6"></i>
             <h3>Vyhodnotenie stratégie</h3>
-            <p class="con-ser-p">Porovnanie pred a po. Vypracujeme report, ktorý porovná vaše produkty alebo firmu pred začiatkom implementácie digitálnej stratégie a po uplynutí určeného obdobia. Týmto spôsobom zistíte účinnosť stratégie a získate cenné poznatky pre budúce rozhodnutia.</p>
+            <p class="con-ser-p">Porovnanie pred a po. Vypracujeme report, ktorý porovná vaše produkty alebo firmu pred
+                začiatkom implementácie digitálnej stratégie a po uplynutí určeného obdobia. Týmto spôsobom zistíte
+                účinnosť stratégie a získate cenné poznatky pre budúce rozhodnutia.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-microphone-slash" id="con-ser-icon7"></i>
             <h3>Diskrétnosť</h3>
-            <p class="con-ser-p">Nemusíte sa obávať utajenia informácií. Vaše interné informácie budeme zachovávať v úplnej dôvere. Nevyužijeme ich pre iné firmy alebo pre naše portfólio.</p>
+            <p class="con-ser-p">Nemusíte sa obávať utajenia informácií. Vaše interné informácie budeme zachovávať v
+                úplnej dôvere. Nevyužijeme ich pre iné firmy alebo pre naše portfólio.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -183,36 +201,47 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako čiastočne prebieha realizácia služby digitálnej stratégie?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako čiastočne prebieha realizácia služby digitálnej stratégie?</span>
+                    </button>
                     <div class="panel">
-                        <p>Realizácia služby digitálnej stratégie začína konzultáciou s klientom, kde sa získavajú informácie o firme, jej produktoch a službách. Na základe týchto informácií sa vykonávajú analýzy, nastavujú ciele a vypracováva sa samotná stratégia.</p>
+                        <p>Realizácia služby digitálnej stratégie začína konzultáciou s klientom, kde sa získavajú
+                            informácie o firme, jej produktoch a službách. Na základe týchto informácií sa vykonávajú
+                            analýzy, nastavujú ciele a vypracováva sa samotná stratégia.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytovanú službu digitálnej stratégie?</span></button>
+                    <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytovanú službu digitálnej stratégie?</span>
+                    </button>
                     <div class="panel">
-                        <p>Platbu za službu digitálnej stratégie je možné vykonať prevodom na náš bankový účet. Presné podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
+                        <p>Platbu za službu digitálnej stratégie je možné vykonať prevodom na náš bankový účet. Presné
+                            podrobnosti o platbe a fakturácii vám poskytneme vopred po dohode.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aký je časový rámec pre dodanie služby digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Časový rámec pre dodanie služby digitálnej stratégie závisí od rozsahu projektu a jeho komplexity. Po dôkladnej analýze vašich potrieb a požiadaviek vám poskytneme konkrétny odhad času, ktorý bude potrebný na realizáciu.</p>
+                        <p>Časový rámec pre dodanie služby digitálnej stratégie závisí od rozsahu projektu a jeho
+                            komplexity. Po dôkladnej analýze vašich potrieb a požiadaviek vám poskytneme konkrétny odhad
+                            času, ktorý bude potrebný na realizáciu.</p>
                     </div>
                 </div>
                 <div class="menu-4">
                     <button class="accordion"><span class="btn-text">Aký je obsah reportu pri vyhodnotení digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Report pri vyhodnotení stratégie zahŕňa informácie o vašej firme, analýze zákazníkov, nastavení cieľov a samotnej stratégii. Poskytuje prehľad o dosiahnutých výsledkoch a pomáha zhodnotiť úspech stratégie.</p>
+                        <p>Report pri vyhodnotení stratégie zahŕňa informácie o vašej firme, analýze zákazníkov,
+                            nastavení cieľov a samotnej stratégii. Poskytuje prehľad o dosiahnutých výsledkoch a pomáha
+                            zhodnotiť úspech stratégie.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Čo všeobecne zahŕňa dodanie služby digitálnej stratégie?</span>
                     </button>
                     <div class="panel">
-                        <p>Dodanie služby digitálnej stratégie zahŕňa vykonanie analýz, vypracovanie a nastavenie stratégie, prípadne vytvorenie marketingových a biznisových kampaní. Celý proces je zameraný na dosiahnutie vašich cieľov a rast vášho podnikania.</p>
+                        <p>Dodanie služby digitálnej stratégie zahŕňa vykonanie analýz, vypracovanie a nastavenie
+                            stratégie, prípadne vytvorenie marketingových a biznisových kampaní. Celý proces je zameraný
+                            na dosiahnutie vašich cieľov a rast vášho podnikania.</p>
                     </div>
                 </div>
             </div>
@@ -363,7 +392,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
