--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -5,14 +5,19 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-408VDD82V3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
         gtag('js', new Date());
 
 
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
-    <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"></script>
+    <script id="cookieyes" src="https://cdn-cookieyes.com/client_data/56e945907a950eda2b4d673f/script.js"
+            type="text/javascript"></script>
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -110,41 +115,48 @@
         <div>
             <i aria-hidden="true" class="fa fa-facebook" id="con-ser-icon1"></i>
             <h3>Facebook</h3>
-            <p class="con-ser-p">After movie, ktoré oživí vašu akciu.Pomôžeme vám vytvoriť profesionálne videá, ktoré vás vystavia v najlepšom svetle a pripútajú pozornosť vašej cieľovej skupiny.</p>
+            <p class="con-ser-p">After movie, ktoré oživí vašu akciu.Pomôžeme vám vytvoriť profesionálne videá, ktoré
+                vás vystavia v najlepšom svetle a pripútajú pozornosť vašej cieľovej skupiny.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-instagram" id="con-ser-icon2"></i>
             <h3>Instagram</h3>
-            <p class="con-ser-p">Kreatívne Reels a video posty. Nechajte nás vytvoriť úžasné videá na Instagram, ktoré zaujmú vašich nasledovníkov a vytvoria silnú vizuálnu identitu pre váš profil.</p>
+            <p class="con-ser-p">Kreatívne Reels a video posty. Nechajte nás vytvoriť úžasné videá na Instagram, ktoré
+                zaujmú vašich nasledovníkov a vytvoria silnú vizuálnu identitu pre váš profil.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-youtube-play" id="con-ser-icon3"></i>
             <h3>YouTube</h3>
-            <p class="con-ser-p">Posunite váš YouTube kanál na vyšší level. Pomôžeme vám vytvoriť profesionálne a vizuálne pútavé videá, ktoré vám pomôžu zaujať a angažovať vaše publikum.</p>
+            <p class="con-ser-p">Posunite váš YouTube kanál na vyšší level. Pomôžeme vám vytvoriť profesionálne a
+                vizuálne pútavé videá, ktoré vám pomôžu zaujať a angažovať vaše publikum.</p>
         </div>
     </section>
     <section class="content-ser-2">
         <div>
             <i aria-hidden="true" class="fa fa-globe" id="con-ser-icon4"></i>
             <h3>Web</h3>
-            <p class="con-ser-p">Videá, ktoré oživia váš web. Už nezostávajte len pri mobilných aplikáciách. Pomôžeme vám spracovať videá, ktoré budú zaujímavé a interaktívne na vašom webe.</p>
+            <p class="con-ser-p">Videá, ktoré oživia váš web. Už nezostávajte len pri mobilných aplikáciách. Pomôžeme
+                vám spracovať videá, ktoré budú zaujímavé a interaktívne na vašom webe.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-scissors" id="con-ser-icon5"></i>
             <h3>Strihanie</h3>
-            <p class="con-ser-p">Vaše myšlienky, náš strih. Ak máte koncept, ale potrebujete skúsenosti so strihaním videa, dajte nám ho a vytvoríme spoločne niečo úžasné.</p>
+            <p class="con-ser-p">Vaše myšlienky, náš strih. Ak máte koncept, ale potrebujete skúsenosti so strihaním
+                videa, dajte nám ho a vytvoríme spoločne niečo úžasné.</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-file-video-o" id="con-ser-icon6"></i>
             <h3>Re-editácia</h3>
-            <p class="con-ser-p">Vytvárame nové z existujúcich videí. Nechajte nás vytvoriť nové videá zo série existujúcich videí a prineste im nový život a hodnotu.</p>
+            <p class="con-ser-p">Vytvárame nové z existujúcich videí. Nechajte nás vytvoriť nové videá zo série
+                existujúcich videí a prineste im nový život a hodnotu.</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
             <h3>360° video</h3>
-            <p class="con-ser-p">Zaujímavý zážitok s 360° videami. Ponúkame vám možnosť vytvoriť 360° videá, ktoré umožnia vašim zákazníkom detailnejšie prehliadnuť váš produkt a zažiť interaktívny zážitok.</p>
+            <p class="con-ser-p">Zaujímavý zážitok s 360° videami. Ponúkame vám možnosť vytvoriť 360° videá, ktoré
+                umožnia vašim zákazníkom detailnejšie prehliadnuť váš produkt a zažiť interaktívny zážitok.</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -180,22 +192,32 @@
             </div>
             <div class="faq-menu">
                 <div class="menu-1">
-                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa video produkcia uskutočňuje?</span></button>
+                    <button class="accordion"><span class="btn-text">Ako prebieha realizácia služby a kde sa video produkcia uskutočňuje?</span>
+                    </button>
                     <div class="panel">
-                        <p>Naša video produkcia sa realizuje fyzicky na mieste, ktoré si vyberiete. Môže ísť o rôzne udalosti, ako sú firemné stretnutia, konferencie, svadby, hudobné koncerty alebo iné podujatia. Naši profesionálni kameramani zabezpečia zachytenie dôležitých okamihov a vytvorenie kvalitného videa. Spoločne dohodneme miesto a čas konania.</p>
+                        <p>Naša video produkcia sa realizuje fyzicky na mieste, ktoré si vyberiete. Môže ísť o rôzne
+                            udalosti, ako sú firemné stretnutia, konferencie, svadby, hudobné koncerty alebo iné
+                            podujatia. Naši profesionálni kameramani zabezpečia zachytenie dôležitých okamihov a
+                            vytvorenie kvalitného videa. Spoločne dohodneme miesto a čas konania.</p>
                     </div>
                 </div>
                 <div class="menu-2">
-                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie hotového videa?</span></button>
+                    <button class="accordion"><span class="btn-text">Aký je časový rámec na spracovanie a doručenie hotového videa?</span>
+                    </button>
                     <div class="panel">
-                        <p>Časový rámec na spracovanie a doručenie hotového videa sa líši v závislosti od rozsahu projektu a aktuálneho pracovného vyťaženia. Po skončení natáčania videa nasleduje proces strihania, úpravy a pridávania efektov. Snažíme sa vám poskytnúť hotové video v čo najkratšom čase, aby ste si mohli vychutnať výsledok.</p>
+                        <p>Časový rámec na spracovanie a doručenie hotového videa sa líši v závislosti od rozsahu
+                            projektu a aktuálneho pracovného vyťaženia. Po skončení natáčania videa nasleduje proces
+                            strihania, úpravy a pridávania efektov. Snažíme sa vám poskytnúť hotové video v čo
+                            najkratšom čase, aby ste si mohli vychutnať výsledok.</p>
                     </div>
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Aké sú možnosti platby za poskytované video produkcie a akceptujete platbu kreditnými kartami?</span>
                     </button>
                     <div class="panel">
-                        <p>Platbu za naše video produkcie je možné vykonať prevodom na náš bankový účet alebo v hotovosti pri realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami, ale vieme vám poskytnúť podrobnosti o platbe vopred, aby ste mali všetko pripravené.</p>
+                        <p>Platbu za naše video produkcie je možné vykonať prevodom na náš bankový účet alebo v
+                            hotovosti pri realizácii služby. Momentálne neposkytujeme možnosť platby kreditnými kartami,
+                            ale vieme vám poskytnúť podrobnosti o platbe vopred, aby ste mali všetko pripravené.</p>
                     </div>
                 </div>
                 <div class="menu-4">
@@ -203,14 +225,19 @@
 Ake formáty a akú kvalitu videa poskytujeme pre rôzne platformy?</span>
                     </button>
                     <div class="panel">
-                        <p>Poskytujeme videá vo viacerých formátoch, vrátane digitálnych formátov ako MP4, MOV, AVI a veľa ďalších. Prispôsobíme sa vašim požiadavkám na formát a kvalitu videa, aby bolo kompatibilné s rôznymi platformami a zariadeniami.</p>
+                        <p>Poskytujeme videá vo viacerých formátoch, vrátane digitálnych formátov ako MP4, MOV, AVI a
+                            veľa ďalších. Prispôsobíme sa vašim požiadavkám na formát a kvalitu videa, aby bolo
+                            kompatibilné s rôznymi platformami a zariadeniami.</p>
                     </div>
                 </div>
                 <div class="menu-5">
                     <button class="accordion"><span class="btn-text">Ako dlho budú upravené videá uchované na cloudovom úložisku po ich odovzdaní?</span>
                     </button>
                     <div class="panel">
-                        <p>Po spracovaní a odovzdaní hotových videí vám poskytneme prístup na cloudové úložisko, kde budú vaše videá uchované počas 30 dní. Počas tohto obdobia máte možnosť si videá stiahnuť a zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme video z cloudového úložiska odstrániť, aby sme uvoľnili miesto pre ďalšie projekty..</p>
+                        <p>Po spracovaní a odovzdaní hotových videí vám poskytneme prístup na cloudové úložisko, kde
+                            budú vaše videá uchované počas 30 dní. Počas tohto obdobia máte možnosť si videá stiahnuť a
+                            zálohovať ich na vlastnom zariadení. Po uplynutí 30 dní môžeme video z cloudového úložiska
+                            odstrániť, aby sme uvoľnili miesto pre ďalšie projekty..</p>
                     </div>
                 </div>
             </div>
@@ -361,7 +388,7 @@ Ake formáty a akú kvalitu videa poskytujeme pre rôzne platformy?</span>
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
-<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
+<script crossorigin="anonymous" src="https://kit.fontawesome.com/6d4730ed07.js"></script>
 </body>
 </html>
 
